<resources>
    <string name="app_name">ContactsTest</string>
    <string name="read_contacts">READ CONTACTS</string>
    <string name="denied_permission">you denied the permission</string>
    <string name="need_update_system">this function need android update to JELLY_BEAN</string>
    <string name="add_data">ADD DATA</string>
    <string name="update_data">UPDATE DATA</string>
    <string name="delete_data">DELETE DATA</string>
    <string name="query_data">QUERY DATA</string>
    <string name="web_page">WEB PAGE</string>
    <string name="http_page">HTTP PAGE</string>
    <string name="okhttp_page">OKHTTP PAGE</string>
</resources>
